--- a/accounts/templates/accounts/password_reset.html
+++ b/accounts/templates/accounts/password_reset.html
@@ -1,14 +1,14 @@
 {% extends 'articles/base.html' %}
-
 {% load crispy_forms_tags %}
 
-{% block content%}
+
+{% block content %}
 
 <div class="content-section">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb4">Sign Up Today</legend>
+            <legend class="border-bottom mb4">Password Reset</legend>
         </fieldset>
         {% if form.errors %}
         <div class="alert mb-3" width="100%" style="border-color: #dc3545; color: #dc3545">
@@ -17,10 +17,9 @@
         {% endif %}
         {{ form | crispy }}
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Register</button>
-            <small class="text-muted ml-2">
-                <a href="{% url 'password_reset' %}"> Forgot Password? </a>
-            </small>
+            <button class="btn btn-outline-info" type="submit">
+                Request Password Reset Link
+            </button>
         </div>
     </form>
 </div>
