--- a/articles/templates/articles/base.html
+++ b/articles/templates/articles/base.html
@@ -3,14 +3,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    {% include 'articles/meta.html' %}
     {% if title %}
-    <title>{{ title }} | Blogger </title>
+    <title>{{ title }} | PyBlogger </title>
     {% else %}
     <title>Blogger</title>
     {% endif %}
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link rel="shortcut icon" href="{% static 'img/favicon.jpg' %}" type="image/jpg">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
