--- a/articles/templates/articles/base.html
+++ b/articles/templates/articles/base.html
@@ -7,7 +7,7 @@
     {% if title %}
     <title>{{ title }} | PyBlogger </title>
     {% else %}
-    <title>Blogger</title>
+    <title>PyBlogger</title>
     {% endif %}
     <link rel="shortcut icon" href="{% static 'img/favicon.jpg' %}" type="image/jpg">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
