--- a/articles/templates/articles/details.html
+++ b/articles/templates/articles/details.html
@@ -7,7 +7,8 @@
     <div class="media-body">
         <img src="{{ article.thumbnail.url }}" class="rounded-circle article-img" />
         <div class="article-metadata">
-            <a href="#" class="mr-2">Author: {{ article.author }}</a>
+            Author:
+            <a href="{% url 'user_articles' article.author.username %}" class="mr-2">{{ article.author }}</a>
             <small class="text-muted">{{ article.date_created |date:"F d, Y." }}
             </small>
             {% if article.author == request.user %}
@@ -58,7 +59,7 @@
     <img src="{{ article.thumbnail.url }}" class="rounded-circle article-img">
     <div class="media-body">
         <div class="article-metadata">By
-            <a href="#" class="mr-2"> {{ comment.author }} </a> On
+            <a href=" {% url 'user_articles' comment.author.username %} " class="mr-2"> {{ comment.author }} </a> On
             <small class="text-muted"> {{ comment.date_created|date:"F d, Y."}} </small>
         </div>
         <p> {{ comment.content }} </p>
