Added requirements.txt and updated sidebar

--- a/articles/templates/articles/sidebar.html
+++ b/articles/templates/articles/sidebar.html
@@ -1,10 +1,24 @@
 <div class="content-section">
     <div class="text-muted">
-        Web App Developer with Django
+        <span>
+            <strong>Egbe Victor Junior: victoregbejunior@gmail.com </strong>
+        </span>
         <ul class="list-group">
-            <li class="list-group-item list-group-item-light">Python</li>
-            <li class="list-group-item list-group-item-light">Django</li>
-            <li class="list-group-item list-group-item-light">Victor Egbe</li>
+            <li class="list-group-item list-group-item-light">
+                <a href="https://web.facebook.com/egbevictor.junior" target="_blank" rel="noopener noreferrer">
+                    Facebook
+                </a>
+            </li>
+            <li class="list-group-item list-group-item-light">
+                <a href="https://github.com/VictorEgbe" target="_blank" rel="noopener noreferrer">
+                    Github
+                </a>
+            </li>
+            <li class="list-group-item list-group-item-light">
+                <a href="https://twitter.com/egbe_victor" target="_blank" rel="noopener noreferrer">
+                    Twitter
+                </a>
+            </li>
         </ul>
     </div>
 </div>
