--- a/articles/templates/articles/details.html
+++ b/articles/templates/articles/details.html
@@ -22,7 +22,7 @@
             <h3 class="article-title">{{ article.title }}</h3>
         </div>
         <p>
-            {{ article.content }}
+            {{ article.content|linebreaks }}
         </p>
     </div>
 </article>
