--- a/accounts/templates/accounts/activation.html
+++ b/accounts/templates/accounts/activation.html
@@ -1,9 +1,8 @@
-<h3>Account Activation for {{domain}}</h3>
-
 {% autoescape off %}
 
 Hi {{ user.username }},
-You received this email because you created an account with us. Please click on the link to confirm your registration,
+You received this email because you created an account with us {{domain}}. Please click on the link to confirm your
+registration,
 https://{{ domain }}{% url 'activate' uidb64=uid token=token %}
 
 {% endautoescape %}
